Finalice todas los puntos del challenge, falta revisar antes de entrega

--- a/App.config
+++ b/App.config
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<connectionStrings>
-		<add name="Conn" connectionString="Server=DESKTOP-JA29JCT\SQLEXPRESS;Uid=sa;Pwd=sasa;MultipleActiveResultSets=True;Timeout=2;Database=pruebademo;" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <add name="Conn" connectionString="Server=DESKTOP-JA29JCT\SQLEXPRESS;Uid=sa;Pwd=sasa;MultipleActiveResultSets=True;Timeout=2;Database=pruebademo;"
+   providerName="System.Data.SqlClient" />
+  <add name="TacticaSoft.My.MySettings.pruebademoConnectionString"
+   connectionString="Data Source=DESKTOP-JA29JCT\SQLEXPRESS;Initial Catalog=pruebademo;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 </configuration>
